--- a/templates/base.html
+++ b/templates/base.html
@@ -299,6 +299,13 @@
                         <span>Leaderboards</span>
                     </a>
 
+                    <a href="{% url 'contribute' %}" class="flex items-center space-x-2 text-gray-300 hover:text-white transition-colors whitespace-nowrap">
+                        <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6v6m0 0v6m0-6h6m-6 0H6"/>
+                        </svg>
+                        <span>Contribute</span>
+                    </a>
+
                     {% if user.is_authenticated %}
                     <a href="{% url 'my_lists' %}" class="flex items-center space-x-2 text-gray-300 hover:text-white transition-colors whitespace-nowrap">
                         <svg class="w-4 h-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
